[package]
name = "rocket_auth"
version = "0.4.0"
authors = ["tvallotton@uc.cl"]
edition = "2018"
license = "MIT or Apache-2.0"
description = "A high level authentication management library for Rocket applications. It supports both SQLite and Postgres."
repository = "https://github.com/tvallotton/rocket_auth"

readme = "README.md"
categories = ["web-programming"]
keywords = ["rocket", "users", "authentication", "auth", "session"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true


[features]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]


[dependencies.rusqlite]
version = "0.25.3"
optional = true



[dependencies]
rand = "0.8.3"
rust-argon2 = "0.8.3"
lazy_static = "1.4.0"
regex = "1"
serde_json = "1.0.59"
chashmap = "2.2.2"
thiserror = "1.0.25"
async-trait = "0.1.50"
fehler = "1.0.0"
chrono = "0.4.19"
validator = { version = "0.14.0", features = ["derive"] }


[dependencies.sqlx]
version = "0.5.5"
optional = true


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.tokio-postgres]
version = "0.7.0"
optional = true



[dependencies.redis]
version = "0.20.0"
features = ["aio", "tokio-comp"]
optional = true

[dependencies.futures]
version = "0.3.16"

[dependencies.tokio]
version = "1.4.0"
features = ["rt", "rt-multi-thread"]


[dev-dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets", "json"]


[dev-dependencies.tokio-postgres]
version = "0.7.0"

[dev-dependencies.redis]
version = "0.20.0"
features = ["aio", "tokio-comp"]


[dev-dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]


[dev-dependencies.sqlx]
version = "0.5.5"
features = ["runtime-tokio-rustls"]

[dev-dependencies.rocket_auth]
path = "../rocket_auth"
features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "redis", "tokio-postgres"]
