[package]
name = "rocket_auth"
version = "0.4.0"
authors = ["tvallotton@uc.cl"]
edition = "2018"
license = "MIT or Apache-2.0"
description = "A high level authentication management library for Rocket applications. It supports both SQLite and Postgres."
repository = "https://github.com/tvallotton/rocket_auth"

readme = "README.md"
categories = ["web-programming"]
keywords = ["rocket", "users", "authentication", "auth", "session"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true


[features]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]


# [dependencies]
# rand = "0.8.3"
# rust-argon2 = "0.8.3"
# lazy_static = "1.4.0"
# regex = "1"
# serde_json = "1.0.59"
# chashmap = "2.2.2"
# thiserror = "1.0.25"
# async-trait = "0.1.50"
# fehler = "1.0.0"
# chrono = "0.4.19"
# validator = { version = "0.14.0", features = ["derive"] }
# rocket-sessions = "0.0.1"
# cookie = "0.16.0"

[dependencies]
rand = "0.8.5"
rust-argon2 = "1.0.0"
lazy_static = "1.4.0"
regex = "1.5.6"
serde_json = "1.0.82"
chashmap = "2.2.2"
thiserror = "1.0.31"
async-trait = "0.1.56"
fehler = "1.0.0"
chrono = "0.4.19"
rocket_lang = "0.1.2"
validator = "0.15.0"
log = "0.4.17"
rand_seeder = "0.2.3"
once_cell = "1.12.0"
derive_builder = "0.11.2"

[dependencies.rusqlite]
version = "0.27.0"
optional = true

[dependencies.sqlx]
version = "0.6.0"
optional = true

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["secrets"]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.tokio-postgres]
version = "0.7.6"
optional = true

[dependencies.redis]
version = "0.21.5"
features = ["aio", "tokio-comp"]
optional = true

[dependencies.tokio]
version = "1.19.2"
features = ["rt", "rt-multi-thread"]

[dev-dependencies]
tokio-postgres = "0.7.6"
pretty_env_logger = "0.4.0"
log = "0.4.17"
anyhow = "1.0.58"

[dev-dependencies.rocket]
version = "0.5.0-rc.2"
features = ["secrets", "json"]

[dev-dependencies.redis]
version = "0.21.5"
features = ["aio", "tokio-comp"]

[dev-dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dev-dependencies.sqlx]
version = "0.6.0"
features = ["runtime-tokio-rustls"]

[dev-dependencies.rocket_auth]
path = "../rocket_auth"
features = [
    "sqlx-postgres",
    "sqlx-mysql",
    "redis",
    "tokio-postgres",
    "rusqlite",
    "sqlx-sqlite",
]
